--- a/index.html
+++ b/index.html
@@ -168,7 +168,7 @@
             // Nivel 1
             {
                 question: "Estás diseñando la montaña rusa Jala-Rex, y para darle un toque extremo, cada nueva curva debe tener una conexión especial con cada una de las curvas anteriores. Es decir, la curva 2 se conecta con la 1, la 3 con la 1 y 2, la 4 con la 1, 2 y 3, y así sucesivamente. Si hay n curvas, ¿cuántas conexiones en total vas a tener que construir?",
-                image: "https://images.unsplash.com/photo-1551632436-cbf8dd35adfa?ixlib=rb-1.2.1&auto=format&fit=crop&w=500&q=60",
+                image: "https://i0.wp.com/www3.gobiernodecanarias.org/medusa/ecoblog/mramrodp/files/2016/03/montana-rusa.jpg?resize=538%2C247&ssl=1",
                 options: [
                     "\\[ n^2 \\]",
                     "\\[ \\frac{n(n-1)}{2} \\]",
@@ -211,7 +211,7 @@
                 "2. La altura promedio (en cm) permitida varía según la edad. " +
                 "3. Según las normas de seguridad, la altura debe ser al menos igual a la velocidad de la atracción más 90. " +
                 "¿Cuál de los siguientes conjuntos (altura en cm, velocidad en km/h) cumple correctamente con esta norma?",
-                image: "https://images.unsplash.com/photo-1551632436-cbf8dd35adfa?ixlib=rb-1.2.1&auto=format&fit=crop&w=500&q=60",
+                image: "https://static.caribbeannewsdigital.com/cdn/ff/z4TQlGQF7TXmLVKRGq7nSH5P2yTFr8MSQWzVyaJhvq4/1723812376/public/inline-images/red%20foce.jpg",
                 options: [
                   "(120,30), (130,40), (140,50), (150,60)",
                   "(120,30), (130,40), (130,50), (150,60)",
